# RealGoodSplits

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build_windows.bat  install_windows.bat  pyproject.toml  realgoodsplits.spec  requirements.txt  run.bat  run_gui.py
.github/workflows/: build-windows.yml  test.yml
realgoodsplits/: __init__.py  __main__.py  cli.py  gui.py  separator.py
tests/: test_e2e.py  test_unit.py
tools/: make_icon.py
